<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.tfg_cooperativa.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tfg_cooperativa.fragments.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.tfg_cooperativa.fragments.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register"/>

    <fragment
        android:id="@+id/materialsFragment"
        android:name="com.example.tfg_cooperativa.fragments.MaterialsFragment"
        android:label="@string/nav_materials"
        tools:layout="@layout/fragment_materials"/>

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.tfg_cooperativa.fragments.ProductsFragment"
        android:label="@string/nav_products"
        tools:layout="@layout/fragment_products"/>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.tfg_cooperativa.fragments.ProductDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_product_detail"/>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.tfg_cooperativa.fragments.CartFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.tfg_cooperativa.fragments.CheckoutFragment"
        android:label="@string/checkout_title"
        tools:layout="@layout/fragment_checkout"/>

    <fragment
        android:id="@+id/portalFragment"
        android:name="com.example.tfg_cooperativa.fragments.PortalFragment"
        android:label="@string/nav_portal"
        tools:layout="@layout/fragment_portal"/>

    <fragment
        android:id="@+id/adminFragment"
        android:name="com.example.tfg_cooperativa.fragments.AdminFragment"
        android:label="@string/admin_title"
        tools:layout="@layout/fragment_admin"/>

</navigation>